# ch32v003-blinky-rust

./: Cargo.toml  Embed.toml  LICENSE  README.md  riscv32ec-unknown-none-elf.json
.cargo/: config.toml
src/: main.rs
